--- a/src/pages/ListPage/ListPage.css
+++ b/src/pages/ListPage/ListPage.css
@@ -4,3 +4,31 @@
 .book-card:hover {
     opacity: .9;
 }
+
+/* Стили для наложения модального окна */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center; /* Центрирование по вертикали */
+    justify-content: center; /* Центрирование по горизонтали */
+    z-index: 1000; /* Поверх остальных элементов */
+}
+
+/* Стили для модального окна */
+.modal {
+    background: white;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 500px;
+    width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+    position: relative;
+    z-index: 1001; /* Поверх overlay */
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2); /* Тень для выделения */
+}
